--- a/app/html/include/header.html
+++ b/app/html/include/header.html
@@ -29,3 +29,12 @@
 </head>
 
 <body>
+
+	<header class="header">
+		<div class="container">
+			<div class="header__inner">
+				<span>ToDo list</span>
+				<img src="img/task.png" alt="task">
+			</div>
+		</div>
+	</header>
