--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 /*! Шрифты для проекта */
+@import url(https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap);
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 html {
   line-height: 1.15;
@@ -152,6 +153,33 @@ template {
   display: none
 }
 /*! Общие стили */
+.btn.active.focus,
+.btn.active:focus,
+.btn.focus,
+.btn:active.focus,
+.btn:active:focus,
+.btn:focus,
+a,
+a.active.focus,
+a.active:focus,
+a.focus,
+a:active.focus,
+a:active:focus,
+a:focus,
+button.active.focus,
+button.active:focus,
+button.focus,
+button:active.focus,
+button:active:focus,
+button:focus,
+input {
+  outline: 0!important;
+  outline-color: transparent!important;
+  outline-width: 0!important;
+  outline-style: none!important;
+  -webkit-box-shadow: 0 0 0 0 rgba(0,123,255,0)!important;
+  box-shadow: 0 0 0 0 rgba(0,123,255,0)!important
+}
 html {
   -webkit-box-sizing: border-box;
   box-sizing: border-box
@@ -168,7 +196,27 @@ img {
 }
 body {
   min-width: 320px;
-  position: relative
+  position: relative;
+  font-family: 'Akaya Telivigala',cursive;
+  font-size: 20px
+}
+.text-wrap {
+  word-wrap: break-word;
+  -webkit-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto
+}
+::-webkit-scrollbar {
+  width: 4px;
+  height: 4px;
+  background-color: #ff9cac
+}
+::-webkit-scrollbar-thumb {
+  background-color: #000;
+  border-radius: 9em
+}
+::-webkit-scrollbar-thumb:hover {
+  background-color: #253861
 }
 .container {
   max-width: 1240px;
@@ -198,3 +246,176 @@ body {
   }
 }
 /*! Основные стили */
+.header {
+  -webkit-box-shadow: 0 1px #a9a9a9;
+  box-shadow: 0 1px #a9a9a9;
+  background: #ff9cac
+}
+.header__inner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  padding: 15px 0;
+  display: flex;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center
+}
+.header__inner span {
+  line-height: 0
+}
+.header__inner img {
+  margin-left: 5px;
+  width: 25px;
+  height: 25px
+}
+.main {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  background: #fdebeb;
+  height: calc(100vh - 96px)
+}
+.todo {
+  padding: 50px 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center
+}
+.todo__app {
+  padding: 10px;
+  width: 450px;
+  height: 450px;
+  border: 1px solid #000;
+  border-radius: 10px
+}
+.todo__title {
+  text-align: center;
+  margin-bottom: 10px
+}
+.todo__add-task {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-bottom: 25px
+}
+.todo__tasks {
+  overflow-y: auto;
+  height: 340px
+}
+.todo__input {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+  -ms-flex-positive: 1;
+  flex-grow: 1;
+  padding: 3px 7px;
+  border: 1px solid gray;
+  border-radius: 5px;
+  margin-right: 5px;
+  font-size: 16px
+}
+.todo__btn {
+  cursor: pointer;
+  background-color: #d8d8d8;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  border: 1px solid gray;
+  border-radius: 5px;
+  font-size: 16px;
+  -webkit-transition: all linear .3s;
+  -o-transition: all linear .3s;
+  transition: all linear .3s
+}
+.todo__btn:hover {
+  border: 1px solid #000;
+  background-color: #ff9cac
+}
+.todo__tasks-list {
+  padding: 0;
+  margin: 0
+}
+.todo__tasks-list li {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  max-width: 100%;
+  padding-right: 5px;
+  list-style: none;
+  margin-bottom: 15px;
+  position: relative
+}
+.todo__tasks-list li img {
+  margin-right: 5px;
+  width: 25px;
+  height: 25px
+}
+.todo__tasks-list li::after {
+  position: absolute;
+  display: block;
+  content: "";
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 1px;
+  background-color: #ff9cac
+}
+.todo__tasks-list li:last-child {
+  margin-bottom: 0
+}
+.todo__tasks-list li:last-child::after {
+  display: none
+}
+.footer {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  background: #a9a9a9
+}
+.copyright {
+  padding: 10px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center
+}
+.copyright p {
+  margin: 0
+}
+.priority {
+  font-weight: 600
+}
