--- a/app/html/include/footer.html
+++ b/app/html/include/footer.html
@@ -1,3 +1,13 @@
+<footer class="footer">
+  <div class="container">
+    <div class="copyright">
+      <span>by introversion</span>
+      <p>2021</p>
+    </div>
+  </div>
+</footer>
+
+
 <script src="js/app.js"></script>
 
 </body>
