--- a/app/scss/_config.scss
+++ b/app/scss/_config.scss
@@ -1,5 +1,32 @@
 /*! Общие стили */
 
+// Убираем outline
+a,
+a.active.focus,
+a.active:focus,
+a.focus,
+a:active.focus,
+a:active:focus,
+a:focus,
+button.active.focus,
+button.active:focus,
+button.focus,
+button:active.focus,
+button:active:focus,
+button:focus,
+.btn.active.focus,
+.btn.active:focus,
+.btn.focus,
+.btn:active.focus,
+.btn:active:focus,
+.btn:focus,
+input {
+  outline: 0 !important;
+  outline-color: transparent !important;
+  outline-width: 0 !important;
+  outline-style: none !important;
+  box-shadow: 0 0 0 0 rgba(0, 123, 255, 0) !important;
+}
 
 // Добавляем border-box на весь проект
 html {
@@ -25,4 +52,33 @@ img {
 body {
   min-width: 320px;
   position: relative;
+  font-family: 'Akaya Telivigala', cursive;
+  font-size: 20px;
+}
+
+// Класс для авто дефисов при резайсе окна (не работает на движке blink)
+.text-wrap {
+  word-wrap: break-word;
+  -webkit-hyphens: auto;
+  -moz-hyphens: auto;
+  -ms-hyphens: auto;
+  hyphens: auto;
+}
+
+// Стилизация scroll bar
+::-webkit-scrollbar {
+  width: 4px; /* ширина для вертикального скролла */
+  height: 4px; /* высота для горизонтального скролла */
+  background-color: #ff9cac;
+}
+
+// ползунок скроллбара 
+::-webkit-scrollbar-thumb {
+  background-color: #000000;
+  border-radius: 9em;
+  // box-shadow: inset 1px 1px 10px #f3faf7;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #253861;
 }
