--- a/app/css/app.css
+++ b/app/css/app.css
@@ -200,12 +200,6 @@ body {
   font-family: 'Akaya Telivigala',cursive;
   font-size: 20px
 }
-.text-wrap {
-  word-wrap: break-word;
-  -webkit-hyphens: auto;
-  -ms-hyphens: auto;
-  hyphens: auto
-}
 ::-webkit-scrollbar {
   width: 4px;
   height: 4px;
@@ -300,10 +294,9 @@ body {
   justify-content: center
 }
 .todo__app {
+  overflow: hidden;
   padding: 10px;
-  width: 450px;
-  height: 450px;
-  border: 1px solid #000;
+  border: 1px solid #ff9cac;
   border-radius: 10px
 }
 .todo__title {
@@ -318,6 +311,7 @@ body {
 }
 .todo__tasks {
   overflow-y: auto;
+  padding-right: 10px;
   height: 340px
 }
 .todo__input {
@@ -328,10 +322,16 @@ body {
   -ms-flex-positive: 1;
   flex-grow: 1;
   padding: 3px 7px;
-  border: 1px solid gray;
+  border: 1px solid #ff9cac;
   border-radius: 5px;
   margin-right: 5px;
-  font-size: 16px
+  font-size: 16px;
+  -webkit-transition: .5s;
+  -o-transition: .5s;
+  transition: .5s
+}
+.todo__input:hover {
+  background: #ffebcd
 }
 .todo__btn {
   cursor: pointer;
@@ -345,7 +345,7 @@ body {
   -webkit-box-align: center;
   -ms-flex-align: center;
   align-items: center;
-  border: 1px solid gray;
+  border: 1px solid #ff9cac;
   border-radius: 5px;
   font-size: 16px;
   -webkit-transition: all linear .3s;
@@ -358,18 +358,18 @@ body {
 }
 .todo__tasks-list {
   padding: 0;
-  margin: 0
+  margin: 0;
+  list-style: none;
+  width: 100%
 }
 .todo__tasks-list li {
+  word-break: break-all;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-  max-width: 100%;
-  padding-right: 5px;
-  list-style: none;
+  -webkit-box-align: start;
+  -ms-flex-align: start;
+  align-items: flex-start;
   margin-bottom: 15px;
   position: relative
 }
@@ -382,7 +382,7 @@ body {
   position: absolute;
   display: block;
   content: "";
-  bottom: 0;
+  bottom: -8px;
   left: 0;
   width: 100%;
   height: 1px;
