--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -35,21 +35,18 @@
 }
 
 .main {
-  display: flex;
-  align-items: center;
-  justify-content: center;
   background: #fdebeb;
-  height: calc(100vh - 96px);
+  min-height: calc(100vh - 55px);
 }
 
 .todo {
-  padding: 50px 0;
+  padding: 50px 115px;
   display: flex;
   justify-content: center;
 }
 
 .todo__app {
-  overflow: hidden;
+  min-width: 1000px;
   padding: 10px;
   border: 1px solid #ff9cac;
   border-radius: 10px;
@@ -72,7 +69,6 @@
 }
 
 .todo__input {
-  font-family: 'Akaya Telivigala', cursive;
   display: flex;
   flex-grow: 1;
   padding: 3px 7px;
@@ -89,7 +85,7 @@
   }
 }
 
-.todo__btn {
+.btn {
   cursor: pointer;
   background-color: #d8d8d8;
   display: flex;
@@ -109,15 +105,16 @@
   padding: 0;
   margin: 0;
   list-style: none;
-  width: 100%;
   li {
-    font-size: inherit;
     word-break:break-all;
     display: flex;
     align-items: flex-start;
+    justify-content: space-between;
     margin-bottom: 15px;
     position: relative;
     img {
+      display: block;
+      object-fit: cover;
       margin-right: 5px;
       width: 25px;
       height: 25px;
@@ -142,7 +139,28 @@
   display: none;
 }
 
+.wrapper {
+  display: flex;
+  margin-right: 25px;
+  &:last-child {
+    margin-right: 0;
+  }
+}
+
+.btn-operation {
+  width: max-content;
+  margin-right: 10px;
+  &:last-child {
+    margin-right: 0;
+  }
+}
+
 .footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
   user-select: none;
   background: darkgrey;
 }
