--- a/app/html/include/header.html
+++ b/app/html/include/header.html
@@ -33,8 +33,21 @@
 	<header class="header">
 		<div class="container">
 			<div class="header__inner">
-				<span>ToDo list</span>
-				<img src="img/task.png" alt="task">
+
+				<div class="events-count">
+					<p>Всего задач:</p>
+					<span class="events-count__result">0</span>
+				</div>
+
+				<div class="header__wrapper-logo">
+					<span>ToDo list</span>
+					<img src="img/task.png" alt="task">
+				</div>
+
+				<div class="header__info">
+					Привет:)
+				</div>
+
 			</div>
 		</div>
 	</header>
