--- a/app/scss/_config.scss
+++ b/app/scss/_config.scss
@@ -53,7 +53,11 @@ body {
   min-width: 320px;
   position: relative;
   font-family: 'Akaya Telivigala', cursive;
+  text-rendering: optimizeLegibility;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
   font-size: 20px;
+  user-select: none;
 }
 
 // Стилизация scroll bar
