--- a/app/html/include/header.html
+++ b/app/html/include/header.html
@@ -1,13 +1,10 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="ru">
 <head>
 	<meta charset="utf-8">
 
 	<title>ToDo list by introversion</title>
-	<meta name="description" content="Description">
-	
-	<!-- Отключаем индексацию сайта -->
-	<meta name="robots" content="noindex, nofollow"/> 	
+	<meta name="description" content="ToDo list by introversion">
 
 	<!-- Запрещаем увеличивать страницу по двойному тапу -->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
@@ -25,6 +22,9 @@
 
 	<!-- Подключаем стили -->
 	<link rel="stylesheet" href="css/app.css">
+	
+	<!-- Подключаем core js -->
+	<script defer src="js/app.js"></script>
 
 </head>
 
