--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -13,7 +13,8 @@
 /*! Основные стили */
 .header {
   box-shadow: 0px 1px #a9a9a9;
-  background: rgb(255, 156, 172);
+  background-color: rgb(0, 0, 0);
+  color: aliceblue;
 }
 
 .header__inner {
@@ -33,10 +34,11 @@
 
 .events-count {
   position: absolute;
-  top: calc(50% - 13px);
+  top: 50%;
+  transform: translateY(-50%);
   left: 0;
   display: flex;
-  p {
+  p { 
     margin: 0;
     margin-right: 7px;
   }
@@ -51,7 +53,8 @@
 
 .header__info {
   position: absolute;
-  top: calc(50% - 13px);
+  top: 50%;
+  transform: translateY(-50%);
   right: 0;
   padding: 3px;
   max-width: 350px;
@@ -59,27 +62,38 @@
 }
 
 .main {
-  background: #fdebeb;
-  min-height: calc(100vh - 55px);
-  transition: all 1s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fdebeb;
+  height: calc(100vh - 96px);
+  transition: background-color 1s;
 }
 
 .todo {
-  padding: 50px 220px;
+  padding: 10px 0;
   display: flex;
   justify-content: center;
 }
 
 .todo__app {
-  min-width: 768px;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  max-width: 1920px;
+  width: 100%;
+  max-height: calc(100vh - 155px);
   padding: 10px;
   border: 1px solid #ff9cac;
-  border-radius: 10px;
+  background-color: #000;
 }
 
 .todo__title {
   text-align: center;
   margin-bottom: 10px;
+  span {
+    color: #f0f8ff;
+  }
 }
 
 .todo__add-task {
@@ -90,7 +104,6 @@
 .todo__tasks {
   overflow-y: auto;
   padding-right: 10px;
-  height: 340px;
 }
 
 .todo__input {
@@ -99,7 +112,7 @@
   flex-grow: 1;
   padding: 3px 7px;
   border: 1px solid #ff9cac;
-  border-radius: 5px;
+  border-radius: 3px;
   margin-right: 10px;
   font-size: 16px;
   transition: .2s;
@@ -122,7 +135,7 @@
   justify-content: center;
   align-items: center;
   border: 1px solid #ff9cac;
-  border-radius: 5px;
+  border-radius: 3px;
   font-size: 16px;
   transition: all linear .3s;
   &:hover:not([disabled="disabled"]) {
@@ -131,10 +144,13 @@
 }
 
 .todo__tasks-list {
+  width: 100%;
+  height: 100%;
   padding: 0;
   margin: 0;
   list-style: none;
   li {
+    background-color: bisque;
     padding: 7px;
     border: 1px solid transparent;
     border-radius: 5px;
@@ -308,7 +324,9 @@
   left: 0;
   bottom: 0;
   width: 100%;
-  background: darkgrey;
+  min-height: 57px;
+  background-color: rgb(0, 0, 0);
+  color: aliceblue;
 }
 
 .copyright {
@@ -317,7 +335,35 @@
   justify-content: space-between;
   align-items: center;
   p {
+    font-size: 16px;
     margin: 0;
+    margin-left: 20px;
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .events-count,
+  .header__wrapper-logo,
+  .header__info {
+    font-size: 16px;
+  }
+  .todo__tasks-list li img {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 450px) {
+  .header {
+    height: 39px;
+  }
+  .header__wrapper-logo {
+    display: none;
+  }
+  .copyright__date {
+    font-size: 14px!important;
+  }
+  .header__inner {
+    padding: 20px 0;
   }
 }
 
@@ -339,6 +385,7 @@
     display: block;
     width: 37px;
     height: 37px;
+    fill: aliceblue;
   }
 }
 
