--- a/app/scss/_config.scss
+++ b/app/scss/_config.scss
@@ -52,7 +52,7 @@ img {
 body {
   min-width: 320px;
   position: relative;
-  font-family: 'Akaya Telivigala', cursive;
+  font-family: 'Lobster', cursive;
   text-rendering: optimizeLegibility;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
