--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,3 +1,3 @@
 /*! Шрифты для проекта */
-@import url('https://fonts.googleapis.com/css2?family=Akaya+Telivigala&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 
