--- a/app/css/app.css
+++ b/app/css/app.css
@@ -1,6 +1,10 @@
 @charset "UTF-8";
 /*! Шрифты для проекта */
-@import url(https://fonts.googleapis.com/css2?family=Lobster&display=swap);
+@font-face {
+  font-family: Lobster;
+  src: url(/fonts/Lobster-Regular.eot);
+  src: url(/fonts/Lobster-Regular.eot?#iefix) format("embedded-opentype"),url(/fonts/Lobster-Regular.woff2) format("woff2"),url(/fonts/Lobster-Regular.woff) format("woff"),url(/fonts/Lobster-Regular.ttf) format("truetype"),url(/fonts/Lobster-Regular.svg) format("svg")
+}
 /*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
 html {
   line-height: 1.15;
@@ -197,7 +201,7 @@ img {
 body {
   min-width: 320px;
   position: relative;
-  font-family: Lobster,cursive;
+  font-family: Lobster;
   text-rendering: optimizeLegibility;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
@@ -251,7 +255,8 @@ body {
   -webkit-box-shadow: 0 1px #a9a9a9;
   box-shadow: 0 1px #a9a9a9;
   background-color: #000;
-  color: #f0f8ff
+  color: #f0f8ff;
+  height: 39px
 }
 .header__inner {
   position: relative;
