--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,3 +1,12 @@
 /*! Шрифты для проекта */
-@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
+
+@font-face {
+  font-family: 'Lobster';
+  src: url('/fonts/Lobster-Regular.eot'); /* IE9 Compat Modes */
+  src: url('/fonts/Lobster-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('/fonts/Lobster-Regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('/fonts/Lobster-Regular.woff') format('woff'), /* Pretty Modern Browsers */
+       url('/fonts/Lobster-Regular.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('/fonts/Lobster-Regular.svg') format('svg'); /* Legacy iOS */
+}
 
