--- a/app/scss/_config.scss
+++ b/app/scss/_config.scss
@@ -69,7 +69,7 @@ body {
 
 // ползунок скроллбара 
 ::-webkit-scrollbar-thumb {
-  background-color: #000000;
+  background-color: #c0afaf;
   border-radius: 9em;
 }
 
