--- a/app/scss/_fonts.scss
+++ b/app/scss/_fonts.scss
@@ -1,11 +1,11 @@
 /*! Шрифты для проекта */
 @font-face {
   font-family: 'Lobster';
-  src: url('fonts/Lobster-Regular.eot'); /* IE9 Compat Modes */
-  src: url('fonts/Lobster-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-       url('fonts/Lobster-Regular.woff2') format('woff2'), /* Super Modern Browsers */
-       url('fonts/Lobster-Regular.woff') format('woff'), /* Pretty Modern Browsers */
-       url('fonts/Lobster-Regular.ttf')  format('truetype'), /* Safari, Android, iOS */
-       url('fonts/Lobster-Regular.svg') format('svg'); /* Legacy iOS */
+  src: url('../fonts/Lobster-Regular.eot'); /* IE9 Compat Modes */
+  src: url('../fonts/Lobster-Regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+       url('../fonts/Lobster-Regular.woff2') format('woff2'), /* Super Modern Browsers */
+       url('../fonts/Lobster-Regular.woff') format('woff'), /* Pretty Modern Browsers */
+       url('../fonts/Lobster-Regular.ttf')  format('truetype'), /* Safari, Android, iOS */
+       url('../fonts/Lobster-Regular.svg') format('svg'); /* Legacy iOS */
 }
 
