--- a/app/css/app.css
+++ b/app/css/app.css
@@ -331,13 +331,12 @@ body {
   transition: background-color 1s
 }
 .todo {
-  padding: 10px 0;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -webkit-transform: translate(-50%,-50%);
+  -ms-transform: translate(-50%,-50%);
+  transform: translate(-50%,-50%)
 }
 .todo__app {
   display: -webkit-box;
