--- a/app/css/app.css
+++ b/app/css/app.css
@@ -336,7 +336,8 @@ body {
   left: 50%;
   -webkit-transform: translate(-50%,-50%);
   -ms-transform: translate(-50%,-50%);
-  transform: translate(-50%,-50%)
+  transform: translate(-50%,-50%);
+  width: 100%
 }
 .todo__app {
   display: -webkit-box;
