--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -72,13 +72,11 @@
 }
 
 .todo {
-  // padding: 10px 0;
-  // display: flex;
-  // justify-content: center;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 100%;
 }
 
 .todo__app {
