--- a/app/scss/_config.scss
+++ b/app/scss/_config.scss
@@ -40,6 +40,7 @@ html {
   -webkit-box-sizing: inherit;
   -moz-box-sizing: inherit;
   box-sizing: inherit;
+  image-rendering: -webkit-optimize-contrast;
 }
 
 // Вытягиваем все картинки по ширине
