--- a/app/css/app.css
+++ b/app/css/app.css
@@ -205,6 +205,7 @@ body {
   text-rendering: optimizeLegibility;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
+  image-rendering: -webkit-optimize-contrast;
   font-size: 20px;
   -webkit-user-select: none;
   -moz-user-select: none;
